data cleaninf cert added to moocs page

--- a/moocs.html
+++ b/moocs.html
@@ -67,6 +67,24 @@
                     <div class="mb-3">
                         <div class="card shadow-sm">
                             <div class="card-body p-0">
+                                <img class="img-fluid" src="/assets/files/moocs/data-cleaning.png" alt="">
+                            </div>
+                            <div class="card-footer">
+                                <div class="mb-3">
+                                    <a href="https://www.kaggle.com/learn/certification/devmonti/data-cleaning"
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">Data Cleaning -
+                                        Kaggle
+                                    </a>
+                                </div>
+                                <small class="d-block text-secondary">Coursera</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <div class="card-body p-0">
                                 <img class="img-fluid" src="/assets/files/moocs/intro-to-backend.jpg" alt="">
                             </div>
                             <div class="card-footer">
