--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <hr class="divider d-md-block d-none" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white mb-5">Full stack Laravel & Frontend Developer
+                    <p class="text-white mb-5">React Developer | Web Application Developer
                     </p>
                     <div class="text-center">
                         <a href="https://www.linkedin.com/in/muhammadnaeemtahir/" target="_blank"
