data cleaning cert title fix

--- a/moocs.html
+++ b/moocs.html
@@ -72,11 +72,9 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://www.kaggle.com/learn/certification/devmonti/data-cleaning"
-                                        target="_blank" class="fw-bold text-dark text-decoration-none">Data Cleaning -
-                                        Kaggle
-                                    </a>
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">Data Cleaning</a>
                                 </div>
-                                <small class="d-block text-secondary">Coursera</small>
+                                <small class="d-block text-secondary">Kaggle</small>
                             </div>
                         </div>
                     </div>
