add: new projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,6 +66,98 @@
                 <div class="col-md-4">
                     <div class="mb-3">
                         <div class="card shadow-sm">
+                            <a href="https://hennydcn.netlify.app/" target="_blank" class="text-decoration-none">
+                                <div class="card-header text-center">Henny DCN
+                                </div>
+                                <div class="card-body p-0">
+                                    <img class="img-fluid" src="/assets/projects/henny-dcn.PNG" alt="">
+                                </div>
+                                <div class="card-footer text-center">
+                                    <small class="badge rounded-pill text-bg-primary text-light">Bootstrap</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Ecommerce</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <a href="https://ig-anonymous.vercel.app/" target="_blank" class="text-decoration-none">
+                                <div class="card-header text-center">Instagram Anonymous
+                                </div>
+                                <div class="card-body p-0">
+                                    <img class="img-fluid" src="/assets/projects/insta-anonymous.PNG" alt="">
+                                </div>
+                                <div class="card-footer text-center">
+                                    <small class="badge rounded-pill text-bg-primary text-light">React</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Tailwind</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Nodejs</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Rapid APIs</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <a href="https://syeda.netlify.app/" target="_blank" class="text-decoration-none">
+                                <div class="card-header text-center">Syeda Taqvi Portfolio
+                                </div>
+                                <div class="card-body p-0">
+                                    <img class="img-fluid" src="/assets/projects/syeda.png" alt="">
+                                </div>
+                                <div class="card-footer text-center">
+                                    <small class="badge rounded-pill text-bg-primary text-light">React</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Bootstrap</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Swiper.js</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <a href="https://akrati.netlify.app/" target="_blank" class="text-decoration-none">
+                                <div class="card-header text-center">Akrati
+                                </div>
+                                <div class="card-body p-0">
+                                    <img class="img-fluid" src="/assets/projects/akrati.PNG" alt="">
+                                </div>
+                                <div class="card-footer text-center">
+                                    <small class="badge rounded-pill text-bg-primary text-light">HTML & CSS</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Bootstrap</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Fancybox</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <a href="https://az-portfolio-three.vercel.app/" target="_blank"
+                                class="text-decoration-none">
+                                <div class="card-header text-center">Abeera Zafar Portfolio
+                                </div>
+                                <div class="card-body p-0">
+                                    <img class="img-fluid" src="/assets/projects/az.png" alt="">
+                                </div>
+                                <div class="card-footer text-center">
+                                    <small class="badge rounded-pill text-bg-primary text-light">React</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Emailjs</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">APIs</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
                             <a href="https://bytewisebonus.netlify.app" target="_blank" class="text-decoration-none">
                                 <div class="card-header text-center">RisRos
                                 </div>
@@ -157,7 +249,7 @@
                 <div class="col-md-4">
                     <div class="mb-3">
                         <div class="card shadow-sm">
-                            <a href="https://cyan.devarx.org/" target="_blank" class="text-decoration-none">
+                            <a href="https://www.cyanwp.com/" target="_blank" class="text-decoration-none">
                                 <div class="card-header text-center">Cyan Waterpark
                                 </div>
                                 <div class="card-body p-0">
