add: new projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,6 +66,134 @@
                 <div class="col-md-4">
                     <div class="mb-3">
                         <div class="card shadow-sm">
+                            <a href="https://react-practical-blush.vercel.app/" target="_blank"
+                                class="text-decoration-none">
+                                <div class="card-header text-center">Practical React
+                                </div>
+                                <div class="card-body p-0">
+                                    <img class="img-fluid" src="/assets/projects/practical-react.PNG" alt="">
+                                </div>
+                                <div class="card-footer text-center">
+                                    <small class="badge rounded-pill text-bg-primary text-light">React Utilities</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <a href="https://bawa-immigration-dashboard.vercel.app/admin/auth/login.html"
+                                target="_blank" class="text-decoration-none">
+                                <div class="card-header text-center">BAWA Immigration
+                                </div>
+                                <div class="card-body p-0">
+                                    <img class="img-fluid" src="/assets/projects/bawa-db.png" alt="">
+                                </div>
+                                <div class="card-footer text-center">
+                                    <small class="badge rounded-pill text-bg-primary text-light">Tailwind CSS</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Dashbaord</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <a href="https://mystic-sense-dashboard.netlify.app/" target="_blank"
+                                class="text-decoration-none">
+                                <div class="card-header text-center">Mystic Sense Dashboard
+                                </div>
+                                <div class="card-body p-0">
+                                    <img class="img-fluid" src="/assets/projects/mystic-db.PNG" alt="">
+                                </div>
+                                <div class="card-footer text-center">
+                                    <small class="badge rounded-pill text-bg-primary text-light">Tailwind CSS</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Dashbaord</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <a href="https://mystic-sense.netlify.app/" target="_blank" class="text-decoration-none">
+                                <div class="card-header text-center">Mystic Sense
+                                </div>
+                                <div class="card-body p-0">
+                                    <img class="img-fluid" src="/assets/projects/mystic.PNG" alt="">
+                                </div>
+                                <div class="card-footer text-center">
+                                    <small class="badge rounded-pill text-bg-primary text-light">Tailwind CSS</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Emailjs</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <a href="https://artistic-opencv.netlify.app/" target="_blank" class="text-decoration-none">
+                                <div class="card-header text-center">Artistic
+                                </div>
+                                <div class="card-body p-0">
+                                    <img class="img-fluid" src="/assets/projects/artistic.PNG" alt="">
+                                </div>
+                                <div class="card-footer text-center">
+                                    <small class="badge rounded-pill text-bg-primary text-light">OpenCV</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <a href="https://super-youtiao-49f231.netlify.app/" target="_blank"
+                                class="text-decoration-none">
+                                <div class="card-header text-center">Super Youthio
+                                </div>
+                                <div class="card-body p-0">
+                                    <img class="img-fluid" src="/assets/projects/super-youthio.PNG" alt="">
+                                </div>
+                                <div class="card-footer text-center">
+                                    <small class="badge rounded-pill text-bg-primary text-light">Bootstrap</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Splidejs</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <a href="https://hennydcn.netlify.app/" target="_blank" class="text-decoration-none">
+                                <div class="card-header text-center">Henny DCN Dashboard
+                                </div>
+                                <div class="card-body p-0">
+                                    <img class="img-fluid" src="/assets/projects/henny-dcn-dashboard.png" alt="">
+                                </div>
+                                <div class="card-footer text-center">
+                                    <small class="badge rounded-pill text-bg-primary text-light">Bootstrap</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Dashboard</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
                             <a href="https://hennydcn.netlify.app/" target="_blank" class="text-decoration-none">
                                 <div class="card-header text-center">Henny DCN
                                 </div>
