--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     <li class="nav-item"><a class="nav-link" href="/moocs.html">MOOCs</a></li>
                     <li class="nav-item"><a class="nav-link" href="/internships.html">Internships & Certificates</a>
@@ -93,7 +93,7 @@
     </section>
 
     <!-- Portfolio-->
-    <div id="portfolio" class="cards">
+    <!-- <div id="portfolio" class="cards">
         <div class="container-fluid p-0">
             <h2 class="text-center mt-md-5 mt-3">Projects</h2>
             <hr class="divider" />
@@ -162,7 +162,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Call to action-->
     <section class="py-md-5 py-3 bg-dark text-white" id="contact">
