update: remove old resume and upload new

--- a/index.html
+++ b/index.html
@@ -85,84 +85,13 @@
                     <p class="text-white mb-4">A committed individual, who loves computing, philosphy and more. A
                         preptual Student of computer science and by profession I am a web developer skilled in frontend
                         and backend development both. I also design in my free time.</p>
-                    <a class="btn btn-light btn-xl" href="/assets/files/Muhammad Naeem - CV.pdf" download>Download my
-                        CV</a>
+                    <a class="btn btn-light btn-xl" href="./assets//files/resume-muhammad_naeem_tahir.pdf"
+                        download>Download My
+                        Resume</a>
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- Portfolio-->
-    <!-- <div id="portfolio" class="cards">
-        <div class="container-fluid p-0">
-            <h2 class="text-center mt-md-5 mt-3">Projects</h2>
-            <hr class="divider" />
-            <div class="container">
-                <div class="row mb-3">
-                    <div class="col-md-4">
-                        <div class="mb-3">
-                            <div class="card shadow-sm">
-                                <a href="https://bytewisebonus.netlify.app" target="_blank"
-                                    class="text-decoration-none">
-                                    <div class="card-header text-center">RisRos
-                                    </div>
-                                    <div class="card-body p-0">
-                                        <img class="img-fluid" src="/assets/projects/RisRos.PNG" alt="">
-                                    </div>
-                                    <div class="card-footer text-center">
-                                        <small class="badge rounded-pill text-bg-primary text-light">Bootstrap</small>
-                                        <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
-                                        <small class="badge rounded-pill text-bg-primary text-light">Splide</small>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="mb-3">
-                            <div class="card shadow-sm">
-                                <a href="https://dobi.netlify.app/home.html" target="_blank"
-                                    class="text-decoration-none">
-                                    <div class="card-header text-center">Dobi
-                                    </div>
-                                    <div class="card-body p-0">
-                                        <img class="img-fluid" src="/assets/projects/dobi.PNG" alt="">
-                                    </div>
-                                    <div class="card-footer text-center">
-                                        <small class="badge rounded-pill text-bg-primary text-light">Bootstrap</small>
-                                        <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
-                                        <small class="badge rounded-pill text-bg-primary text-light">Splide</small>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="mb-3">
-                            <div class="card shadow-sm">
-                                <a href="https://bytewiseblog.netlify.app/" target="_blank"
-                                    class="text-decoration-none">
-                                    <div class="card-header text-center">BlogSite
-                                    </div>
-                                    <div class="card-body p-0">
-                                        <img class="img-fluid" src="/assets/projects/blog.PNG" alt="">
-                                    </div>
-                                    <div class="card-footer text-center">
-                                        <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
-                                        <small class="badge rounded-pill text-bg-primary text-light">Carousel</small>
-                                        <small class="badge rounded-pill text-bg-primary text-light">CSS</small>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="text-center">
-                        <a class="btn btn-primary btn-xl" href="/portfolio.html">VIEW MORE</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
 
     <!-- Call to action-->
     <section class="py-md-5 py-3 bg-dark text-white" id="contact">
