--- a/portfolio.html
+++ b/portfolio.html
@@ -65,9 +65,9 @@
                 <div class="col-md-4">
                     <div class="mb-3">
                         <div class="card shadow-sm">
-                            <a href="https://react-practical-blush.vercel.app/" target="_blank"
+                            <a href="https://react-resources.vercel.app/" target="_blank"
                                 class="text-decoration-none">
-                                <div class="card-header text-center">Practical React
+                                <div class="card-header text-center">Practical Resources
                                 </div>
                                 <div class="card-body p-0">
                                     <img class="img-fluid" src="/assets/projects/practical-react.PNG" alt="">
