update CV button, redirect to LinkedIn

--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
                     <p class="text-white mb-4">A committed individual, who loves computing, philosphy and more. A
                         preptual Student of computer science and by profession I am a web developer skilled in frontend
                         and backend development both. I also design in my free time.</p>
-                    <a class="btn btn-light btn-xl" href="./assets//files/resume-muhammad_naeem_tahir.pdf"
-                        download>Download My
-                        Resume</a>
+                    <a class="btn btn-light btn-xl" href="https://www.linkedin.com/in/muhammadnaeemtahir/" target="_blank">Know more</a>
                 </div>
             </div>
         </div>
