redirect on page load

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta http-equiv="refresh" content="0; URL='https://muhammadnaeemtahir.vercel.app/'" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="author" content="Muhammad Naeem Tahir" />
@@ -85,7 +86,8 @@
                     <p class="text-white mb-4">A committed individual, who loves computing, philosphy and more. A
                         preptual Student of computer science and by profession I am a web developer skilled in frontend
                         and backend development both. I also design in my free time.</p>
-                    <a class="btn btn-light btn-xl" href="https://www.linkedin.com/in/muhammadnaeemtahir/" target="_blank">Know more</a>
+                    <a class="btn btn-light btn-xl" href="https://www.linkedin.com/in/muhammadnaeemtahir/"
+                        target="_blank">Know more</a>
                 </div>
             </div>
         </div>
@@ -117,6 +119,13 @@
             </div>
         </div>
     </footer>
+
+    <!-- redirect to another domain -->
+    <script>
+        document.onload(() => {
+            window.location.href = "https://muhammadnaeemtahir.vercel.app/";
+        })
+    </script>
 
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
